test_suite/tests/ui/duplicate-attribute/rename-ser-ser.stderr
error: duplicate serde attribute `rename`
 --> $DIR/rename-ser-ser.rs:6:37
  |
6 |     #[serde(rename(serialize = "x", serialize = "y"))]
  |                                     ^^^^^^^^^

error: aborting due to previous error

